@@ -3832,3 +3832,26 @@ SEXP R_igraph_reciprocity(SEXP graph, SEXP pignore_loops) {
   return result;
 }
   
+SEXP R_igraph_layout_reingold_tilford(SEXP graph, SEXP proot) {
+  
+  igraph_t g;
+  igraph_integer_t root=REAL(proot)[0];
+  igraph_matrix_t res;
+  SEXP result;
+  
+  R_igraph_before();
+  
+  R_SEXP_to_igraph(graph, &g);
+  igraph_matrix_init(&res, 0, 0);
+  igraph_layout_reingold_tilford(&g, &res, root);
+  PROTECT(result=R_igraph_matrix_to_SEXP(&res));
+  igraph_matrix_destroy(&res);
+  
+  R_igraph_after();
+  
+  UNPROTECT(1);
+  return result;
+}
+
+
+  
